# archive

CCENT-Handbook/: LICENSE  README.md  ccenthandbook_update.odt
HikmatOS/: clean.sh  iso.sh  qemu.sh
HikmatOS/kernel/: Makefile
HikmatOS/libc/: Makefile
NimExpress/: nimexpress.nim
am01-assembler/: .gitattributes  .gitignore  Makefile  README.md  ex1.asm
am01-assembler/includes/: err.h  lex.h  parse.h  ptrarr.h  sym.h
am01-assembler/sources/: err.c  lex.c  main.c  parse.c  ptrarr.c  sym.c
am01-assembler/tests/: lex-test.c  main-test.c
backstrat/: main.py
backstrat/freqtrade-strats/: Stavix5.py
backstrat/stavix/: main.py  ohlc.py  ohlc2-test.py  ohlc2.py  ohlcnew.py  oldmain.py  oldmain2.py  oldmain3.py
booklib/: README.md  manage.py  requirements.txt
erc20ml/: eval4.py
fp-knapsack/: README.md  go.mod  main.go
graphql-c/: graphql.c
graphql-cpp/: LICENSE  graphql-cpp.hpp  test_lexer.cpp  test_parser.cpp
irc++/: .gitignore
irc++/src/core/: CMakeLists.txt
irc++/src/core/Core/: Application.cpp  Application.hpp  DPIHandler.hpp  IRC.cpp  IRC.hpp  Log.cpp  Log.hpp  Parser.cpp  Parser.hpp  Resources.hpp  Window.cpp  Window.hpp  imgui_stdlib.cpp  imgui_stdlib.hpp
pecc-calc/: .env  README.md  index.js  package.json
smsg/: README.md
speechwave-old/: .gitignore  README.md
swappytoken/: api.ts  balance.ts  log.ts  main.ts  package.json  tokens.ts  trade.ts  tsconfig.json
symposium2/: README.md  package.json
vibrantdata/: analysis.ts  balance.ts  main.ts  package.json  strategy.ts  tokens.ts  trade.ts  tsconfig.json
zigbson/: build.zig
(+440 files in other folders)
